--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -57,12 +57,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-07T16:34:24.925511Z",
-     "start_time": "2024-10-07T16:34:24.915444Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# makes an array of zeros/ones/any number for the size use the tuple (x,y,z) just put x for 1d array x,y for 2d array and x,y,z for 3d array\n",
@@ -73,19 +68,8 @@
     "rt = np.full_like(x, 4) #full like will basicall take the shape from another array already created and make it using the number provided here we used the aray shape from the array X from above "
    ],
    "id": "3582a57957b4bdfc",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 4, 4, 4, 4, 4, 4, 4, 4, 4])"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 134
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -234,6 +218,191 @@
    "id": "6e8f388b2dcaff7e",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# random decimal numbers\n",
+    "\n",
+    "np.random.rand(4,2)\n",
+    "np.random.random_sample(x.shape)\n",
+    "np.random.randint(77,size = (10,1))"
+   ],
+   "id": "479b6a62415c1316",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# identity matrix\n",
+    "np.identity(5)"
+   ],
+   "id": "d3f7d2f2263ee1a6",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "arr3 = np.array([[1,2,3]])\n",
+    "r1 = np.repeat(arr3, 3, axis = 0)\n",
+    "r1"
+   ],
+   "id": "124632efd0aee3d0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T17:32:28.146926Z",
+     "start_time": "2024-10-07T17:32:28.137754Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 11111\n",
+    "# 10001\n",
+    "# 10901\n",
+    "# 10001\n",
+    "# 11111\n",
+    "\n",
+    "inAr = np.ones((5,5), dtype = \"int\")\n",
+    "inAr[1:4, 1:4] = 0\n",
+    "inAr[2,2] = 9\n",
+    "print(inAr)"
+   ],
+   "id": "ee5c17e8a16b7fa3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1 1 1]\n",
+      " [1 0 0 0 1]\n",
+      " [1 0 9 0 1]\n",
+      " [1 0 0 0 1]\n",
+      " [1 1 1 1 1]]\n"
+     ]
+    }
+   ],
+   "execution_count": 161
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T17:40:58.319050Z",
+     "start_time": "2024-10-07T17:40:58.310875Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "##### careful when copying arrays\n",
+    "\n",
+    "a = np.array([1,2,3])\n",
+    "b = a #this passes the reference for a and doesnt copy so making changes to b will make changes to a alsoinstead use .copy()\n",
+    "b = a.copy()"
+   ],
+   "id": "6a730716a155f35a",
+   "outputs": [],
+   "execution_count": 176
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T17:41:57.798024Z",
+     "start_time": "2024-10-07T17:41:57.789088Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "##### mathematics\n",
+    "\n",
+    "# a+2 #adds 2 to all elements\n",
+    "a + 2\n",
+    "np.sin(a)"
+   ],
+   "id": "7c1d7c18ae3a5c06",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84147098, 0.90929743, 0.14112001])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 180
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T18:30:21.877945Z",
+     "start_time": "2024-10-07T18:30:21.868712Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "before = np.array([[1,2,3,4],[5,6,7,8]])\n",
+    "after = before.reshape(2,2,2)\n",
+    "after"
+   ],
+   "id": "d4e981b877b4365e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 4]],\n",
+       "\n",
+       "       [[5, 6],\n",
+       "        [7, 8]]])"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 183
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T18:31:30.055475Z",
+     "start_time": "2024-10-07T18:31:30.048191Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#vertical stack matrix\n",
+    "\n",
+    "np.vstack((before, before))"
+   ],
+   "id": "5c597f43287c1280",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8],\n",
+       "       [1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8]])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 186
   }
  ],
  "metadata": {
